--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-data-query": "^1.4.1",
+    "@progress/kendo-drawing": "^1.5.7",
+    "@progress/kendo-react-buttons": "^1.2.0",
+    "@progress/kendo-react-dateinputs": "^1.2.0",
+    "@progress/kendo-react-dropdowns": "^1.2.0",
+    "@progress/kendo-react-grid": "^1.2.0",
+    "@progress/kendo-react-inputs": "^1.2.0",
+    "@progress/kendo-react-intl": "^1.2.0",
+    "@progress/kendo-react-pdf": "^1.2.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "react": "^16.2.0",
@@ -17,6 +26,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "react-router-dom": "^4.4.0-alpha.1"
   }
 }
